--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vue-toast-notification": "^3.1.2",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
