--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "vue": "^3.4.21",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.3.0",
