--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.3.0",
