ulasan progerss, ayo bang semnagat ya ayyeeeee

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
     "vue-jwt-decode": "^0.1.0",
+    "vue-rate": "^2.5.0",
     "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.2"
