--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
     "vue-jwt-decode": "^0.1.0",
-    "vue-rate": "^2.5.0",
+    "vue-rate": "^3.1.1",
     "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-star-ratings": "^3.0.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
